--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,6 +1,6 @@
 
 .jumbotron{
-	background:url(../background.jpg) center;
+	background:url(images/background.jpg) center;
 	background-size: cover;
 	color: white;
 	height: 400px;
