--- a/templates/Index.html.twig
+++ b/templates/Index.html.twig
@@ -3,10 +3,21 @@
 {#=========================   ================================== #}
 
 {% block title %}
-    Resister
+    Home
 {% endblock %}
 
+{#=========================   ================================== #}
 
+{% block headextra %} 
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <link href="css/bootstrap.min.css" type="text/css" rel="stylesheet" >
+    <link href="css/stylesheet.css" type="text/css" rel="stylesheet">
+    <link rel="shortcut icon" href="images/logo_icon.ico">     
+{% endblock %}
+
+{#=========================   ================================== #}
 
 
 {% block content %}
@@ -31,7 +42,7 @@
                     <span class="icon-bar"></span> 
                     <span class="icon-bar"></span> 
                 </button>
-                <a class="navbar-brand" href="../">
+                <a class="navbar-brand" href="/">
                     <img src="images/logo.png" width="140" style="margin-top:-10px">
                 </a> 
             </div>
