--- a/templates/Index.html.twig
+++ b/templates/Index.html.twig
@@ -1,168 +1,26 @@
 {% extends "master.html.twig" %}
 
-{#=========================   ================================== #}
-
-{% block title %}
-    Home
-{% endblock %}
-
-{#=========================   ================================== #}
-
-{% block headextra %} 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <link href="css/bootstrap.min.css" type="text/css" rel="stylesheet" >
-    <link href="css/stylesheet.css" type="text/css" rel="stylesheet">
-    <link rel="shortcut icon" href="images/logo_icon.ico">     
-{% endblock %}
-
-{#=========================   ================================== #}
-
+{% block title %}Index{% endblock %}
 
 {% block content %}
-
-{#=========================   ================================== #}
-
-    {% if errorList %}
-        <ul>
-            {% for error in errorList %}
-                <li>{{error}}</li>
-                {% endfor %}
-        </ul>
-    {% endif %}
     
-{#=========================   ================================== #}
+    <div class="properties">
+        <ul id="propertieslist">
+            {% for c in propertiesList %}
+                <li><a href="/list/">{{c.description}}</a></li>
 
-    <div class="navbar-default">
-        <div class="container">
-            <div class="navbar-header nabar-left">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav-bar-links">
-                    <span class="sr-only">Toggle navigation</span> 
-                    <span class="icon-bar"></span> 
-                    <span class="icon-bar"></span> 
-                </button>
-                <a class="navbar-brand" href="/">
-                    <img src="images/logo.png" width="140" style="margin-top:-10px">
-                </a> 
-            </div>
-            
-{#=========================   ================================== #}
-            <div class="collapse navbar-collapse" id="nav-bar-links">
-
-                <form class="navbar-form navbar-right" style="border: none" onSubmit="return Validate()" method="post" action="">
-                    
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="User Name" name="username">
-                        <input type="password" class="form-control" placeholder="Password" name="password">
-                        <input type="submit" class="btn btn-default" value="Sign In" name="submit1">
-                    </div>
-                </form>
-
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="">Register</a></li>
-                </ul>
-            </div>
-        </div>
+            {% endfor %}
+        </ul>
     </div>
-
-{#=========================   ================================== #}
-
-    <div class="container">
-        <div class="well">
-            <div class="row">
-                <div class="col-md-8">
-                    <h3>Registration Form</h3>
-                    <form class="form-horizontal" method="post" onSubmit="return validateRegistration()" action="index.php">
-                        
-                        <div name="form-validate" class="form-group">
-                            
-                            <label for="NAME" class="col-md-3 control-label">Name:</label>
-                            <div class="col-md-9">
-                                <input type="text" class="form-control" placeholder="Ex. Mohamed-mekkawi" name="name" value="{{v.name}}">
-                            </div>
-                        </div>
-                            
-                            
-                      
-                        <div name="form-validate" class="form-group">
-                            <label for="USER_TYPE" class="col-md-3 control-label">Register As:</label>
-                            <div id="USER_TYPE" class="col-md-9">
-                                
-                                <label class="radio-inline">
-                                    <input type="radio" name="seller" value="{{v.seller}}">Seller
-                                </label>
-                                
-                                <label class="radio-inline">
-                                    <input type="radio" name="buyer" value="{{v.buyer}}">buyer
-                                </label>
-                            </div>
-                        </div>
-                        <div name="form-validate" class="form-group">
-                            <label for="PHONE_NUMBER" class="col-md-3 control-label">Phone Number:</label>
-                            <div class="col-md-9">
-                                
-                                <input type="text" class="form-control" name="phoneNumber" placeholder="Ex. (514)619-6420" value="{{v.phoneNumber}}">
-                            </div>
-                        </div>
-                        <div name="form-validate" class="form-group">
-                            <label for="EMAIL" class="col-md-3 control-label">Email:</label>
-                            <div class="col-md-9">
-                                <input type="email" class="form-control" id="EMAIL" name="EMAIL" placeholder="Ex. john-smith@example.com" maxlength="40" value="{{v.name}}">
-                            </div>
-                        </div>
-                        <div name="form-validate" class="form-group">
-                            <label for="USERNAME" class="col-md-3 control-label">Username:</label>
-                            <div class="col-md-9">
-                                <input type="text" class="form-control" name="username" placeholder="At least 6 characters with letters or digits." >
-                            </div>
-                        </div>
-                        <div name="form-validate" class="form-group">
-                            <label for="PASSWORD" class="col-md-3 control-label">Password:</label>
-                            <div class="col-md-9">
-                                <input type="password" class="form-control"  name="pass1" placeholder="At least 6 characters, with capital letters & digits.">
-                            </div>
-                        </div>
-                        <div name="form-validate" class="form-group">
-                            <label for="CONFIRM_PASS" class="col-md-3 control-label">Confirm:</label>
-                            <div class="col-md-9">
-                                <input type="password" class="form-control" name="pass2" placeholder="Confirm Password">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-md-offset-3 col-md-9">
-                                <button type="submit" class="btn btn-primary" name="submit2">Register & Sign in</button>
-                            </div>
-                        </div>
-                    </form>
+    <div class="propertiesList">
+        {% for p in productList %}
+            <div class="propertiesContainer">
+                <div class="imageContainer">
+                    <img src="../images/{{p.imagePath}}" width="100">
                 </div>
-                
-{#=========================   ================================== #}
+                <p>{{p.name}}</p> <p>{{p.price}}</p>
+            </div>
 
-    <div class="col-md-4">
-        <h3>How to Register <span class="glyphicon glyphicon-asterisk"></span></h3>
-        <ol>
-            <li>Your name  must only contain characters and hypens(-).</li>
-            <li>Your last name must only contain characters and hypens(-). </li>
-            <li>Select either Seller or Buyer.</li>
-            <li>The phone number must be in this format(514)619-6420 </li>
-            <li>Enter your email address.</li>
-            <li>Login in name should be at least 6 characters with a combination of letters and digits only.</li>
-            <li>Password must contain a least one digit, an uppercase and lowercase letter.</li>
-            <li>Retype your password to confirm.</li>
-        </ol>
+        {% endfor %}
     </div>
-</div>
-
-{#=========================   ================================== #}
-
-        <footer>
-            <p class="text-center col-md-12"r style="padding-top: 30px">
-                <small>© Copyright On Q8, 2017. All rights reserved.</small></p>
-        </footer>
-
-    </div>
-    </div>
-
-{% endblock %} 
-
+{% endblock %}
