--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -48,7 +48,7 @@
                 </form>
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="">login</a></li>
+                    <li><a href="">Register</a></li>
                 </ul>
             </div>
         </div>
@@ -59,10 +59,7 @@
 
 {#=========================   ================================== #}
 
-        <footer>
-            <p class="text-center col-md-12"r style="padding-top: 30px">
-                <small>© Copyright On Q8, 2017. All rights reserved.</small></p>
-        </footer>
+        
 
     </div>
     </div>
