--- a/templates/logout.html.twig.twig
+++ b/templates/logout.html.twig.twig
@@ -1,2 +1,9 @@
-<p>You've been Logged out</p><br>
-<p><a href="/">click to continue</a>.</p>
+{% extends "master.html.twig" %}
+
+{% block title %}Log out{% endblock %}
+
+{% block content %}
+
+<p>You've logged out.  <a href="/login">Log in</a></p> 
+
+{% endblock %}
