fixing register page

--- a/templates/register.html.twig
+++ b/templates/register.html.twig
@@ -24,95 +24,114 @@
 
 
 {#=========================   ================================== #}
+<script>
+        $(document).ready(function () {
+            $('input[name=email]').bind("propertychange change click keyup input paste", function () {
+                var email = $('input[name=email]').val();
+                $('#isTaken').load('/isemailregistered/' + email);
+            });
+        });
 
+        $(document).ready(function () {
+            $('input[name=username]').bind("propertychange change click keyup input paste", function () {
+                var username = $('input[name=username]').val();
+                $('#UisTaken').load('/isusernameregistered/' + username);
+            });
+        });
+
+    </script>
+    
     <div class="container">
         <div class="well">
             <div class="row">
                 <div class="col-md-8">
                     <h3>Registration Form</h3>
-                    <form class="form-horizontal" method="post" onSubmit="return validateRegistration()" action="index.php">
-                        
+                    <form class="form-horizontal" method="post" enctype="multipart/form-data">
+
                         <div name="form-validate" class="form-group">
-                            
-                            <label for="NAME" class="col-md-3 control-label">Name:</label>
+
+                            {#=============  Name   ==================== #}
+                            <label class="col-md-3 control-label">Name:</label>
                             <div class="col-md-9">
-                                <input type="text" class="form-control" placeholder="Ex. Mohamed-mekkawi" name="name" value="{{v.name}}">
+                                <input type="text" name="name" value="{{v.name}}" class="form-control" placeholder="Ex. Mohamed-mekkawi" >
                             </div>
                         </div>
-                            
-                            
-                      
+                        {#=============  Username   ==================== #}
+
                         <div name="form-validate" class="form-group">
-                            <label for="USER_TYPE" class="col-md-3 control-label">Register As:</label>
-                            <div id="USER_TYPE" class="col-md-9">
-                                
-                                <label class="radio-inline">
-                                    <input type="radio" name="seller" value="{{v.seller}}">Seller
-                                </label>
-                                
-                                <label class="radio-inline">
-                                    <input type="radio" name="buyer" value="{{v.buyer}}">buyer
-                                </label>
-                            </div>
-                        </div>
-                        <div name="form-validate" class="form-group">
-                            <label for="PHONE_NUMBER" class="col-md-3 control-label">Phone Number:</label>
+                            <label class="col-md-3 control-label">User Name:</label>
                             <div class="col-md-9">
-                                
-                                <input type="text" class="form-control" name="phoneNumber" placeholder="Ex. (514)619-6420" value="{{v.phoneNumber}}">
+                                <input type="text" name="username" value="{{v.username}}" class="form-control"  placeholder="At least 6 characters with letters or digits." >
                             </div>
                         </div>
+
+                        {#=============  Email   ==================== #}
                         <div name="form-validate" class="form-group">
-                            <label for="EMAIL" class="col-md-3 control-label">Email:</label>
+                            <label class="col-md-3 control-label">Email:</label>
                             <div class="col-md-9">
-                                <input type="email" class="form-control" id="EMAIL" name="EMAIL" placeholder="Ex. john-smith@example.com" maxlength="40" value="{{v.name}}">
+                                <input type="email" name="email" value="{{v.email}}" class="form-control" id="EMAIL"  placeholder="Ex. john-mohamed@example.com" ><span id="isTaken"></span>
                             </div>
                         </div>
+
+                        {#=============  Password   ==================== #}
+
                         <div name="form-validate" class="form-group">
-                            <label for="USERNAME" class="col-md-3 control-label">Username:</label>
+                            <label class="col-md-3 control-label">Password:</label>
                             <div class="col-md-9">
-                                <input type="text" class="form-control" name="username" placeholder="At least 6 characters with letters or digits." >
+                                <input type="password" name="pass1" class="form-control"   placeholder="At least 6 characters, with capital letters & digits.">
                             </div>
                         </div>
-                        <div name="form-validate" class="form-group">
-                            <label for="PASSWORD" class="col-md-3 control-label">Password:</label>
-                            <div class="col-md-9">
-                                <input type="password" class="form-control"  name="pass1" placeholder="At least 6 characters, with capital letters & digits.">
-                            </div>
-                        </div>
+
+                        {#=============  Password(repeat) ==================== #}
+
                         <div name="form-validate" class="form-group">
                             <label for="CONFIRM_PASS" class="col-md-3 control-label">Confirm:</label>
                             <div class="col-md-9">
-                                <input type="password" class="form-control" name="pass2" placeholder="Confirm Password">
+                                <input type="password" name="pass2" class="form-control"  placeholder="Confirm Password">
                             </div>
                         </div>
+
+                        {#=============  User Type   ==================== #}
+                        <div name="form-validate" class="form-group">
+                            <label class="col-md-3 control-label">Register As:</label>
+                            <div id="USER_TYPE" class="col-md-9">
+
+                                <select name="userType" value="{{v.userType}}">
+                                    <option value="buyer">Buyer</option>
+                                    <option value="seller">Seller</option>
+                                </select>
+
+                            </div>
+                        </div>
+
+                        {#=============  submit   ==================== #}
+
                         <div class="form-group">
                             <div class="col-md-offset-3 col-md-9">
-                                <button type="submit" class="btn btn-primary" name="submit2">Register & Sign in</button>
+                                <input type="submit" value="Register">
+                                <button type="submit" name="" value="Register" class="btn btn-primary" >Register & Sign in</button>
                             </div>
                         </div>
                     </form>
                 </div>
-                
-{#=========================   ================================== #}
 
-    <div class="col-md-4">
-        <h3>How to Register <span class="glyphicon glyphicon-asterisk"></span></h3>
-        <ol>
-            <li>Your name  must only contain characters and hypens(-).</li>
-            <li>Your last name must only contain characters and hypens(-). </li>
-            <li>Select either Seller or Buyer.</li>
-            <li>The phone number must be in this format(514)619-6420 </li>
-            <li>Enter your email address.</li>
-            <li>Login in name should be at least 6 characters with a combination of letters and digits only.</li>
-            <li>Password must contain a least one digit, an uppercase and lowercase letter.</li>
-            <li>Retype your password to confirm.</li>
-        </ol>
-    </div>
-</div>
+                {#=============  right   ==================== #}
 
-    </div>
+                <div class="col-md-4">
+                    <h3>How to Register <span class="glyphicon glyphicon-asterisk"></span></h3>
+                    <ol>
+                        <li>Your name  must contain characters.</li>
+                        <li>Select either Seller or Buyer.</li>
+                        <li>The phone number must be in this format(514)619-6420 </li>
+                        <li>Enter your email address.</li>
+                        <li>Login in name should be at least 6 characters with a combination of letters and digits only.</li>
+                        <li>Password must contain a least one digit, an uppercase and lowercase letter.</li>
+                        <li>Retype your password to confirm.</li>
+                    </ol>
+                </div>
+            </div>
+
+        </div>
     </div>
 
 {% endblock %} 
-
