--- a/templates/internal_error.html.twig
+++ b/templates/internal_error.html.twig
@@ -3,8 +3,14 @@
 {% block title %}Internal Error{% endblock %}
 
 {% block content %}    
-    <p>Internal error occured, we are very sorry.
-        our team of coding ninjas has been notified and is already working on the problems.
+    <div class="container">
+        <div class="center">
+         <br>   
+        <p style="text-align:center;"> Internal error occured, we are very sorry.<br>
+        our team of coding ninjas has been notified and is already working on the problems.<br>
+        <img src="/images/ninja.png" align="middle"><br>
         <a href="/">Click to continue</a>.</p>
-    <img src="/images/ninja.png">
-{% endblock %}{# empty Twig template #}
+        
+    </div>
+    </div>
+{% endblock %}
