--- a/templates/register.html.twig
+++ b/templates/register.html.twig
@@ -108,7 +108,7 @@
 
                         <div class="form-group">
                             <div class="col-md-offset-3 col-md-9">
-                                <input type="submit" value="Register">
+                                <input type="submit" value="Register" class="btn btn-primary">
                                 <button type="submit" name="" value="Register" class="btn btn-primary" >Register & Sign in</button>
                             </div>
                         </div>
@@ -122,7 +122,6 @@
                     <ol>
                         <li>Your name  must contain characters.</li>
                         <li>Select either Seller or Buyer.</li>
-                        <li>The phone number must be in this format(514)619-6420 </li>
                         <li>Enter your email address.</li>
                         <li>Login in name should be at least 6 characters with a combination of letters and digits only.</li>
                         <li>Password must contain a least one digit, an uppercase and lowercase letter.</li>
