--- a/templates/error_internal.html.twig
+++ b/templates/error_internal.html.twig
@@ -1,13 +1,16 @@
 {% extends "master.html.twig" %}
 
-{% block title %}Internal error{% endblock %}
+{% block title %}Internal Error{% endblock %}
 
-{% block content %}
-    
-<p>Internal error occurred, we're very sorry.
-    Our team of coding ninjas has been notified
-    and is already working on the problem.</p>
-<p><a href="/">Click to continue</a></p>
-<img src="/images/ninja.png">
-
+{% block content %}    
+    <div class="container">
+        <div class="center">
+         <br>   
+        <p style="text-align:center;"> Internal error occured, we are very sorry.<br>
+        our team of coding ninjas has been notified and is already working on the problems.<br>
+        <img src="/images/ninja.png" align="middle"><br>
+        <a href="/">Click to continue</a>.</p>
+        
+    </div>
+    </div>
 {% endblock %}
