--- a/templates/login_success.html.twig
+++ b/templates/login_success.html.twig
@@ -1,9 +1,9 @@
 {% extends "master.html.twig" %}
 
-{% block title %}
-Login Success
-{% endblock %}
+{% block title %}Login successful{% endblock %}
 
 {% block content %}
-<p>Login successful,  {{userSession.name}} <a href="/">click to continue</a>.</p>
+    
+<p>Login successful, <a href="/">click to continue</a>.</p>
+
 {% endblock %}
