--- a/templates/access_denied.html.twig
+++ b/templates/access_denied.html.twig
@@ -3,5 +3,5 @@
 {% block title %}Access denied{% endblock %}
 
 {% block content %}  
-<p>Access denied. <a href="/">Click to continue</a>.</p>
+<p>Access denied. <a href="./">Click to continue</a>.</p>
 {% endblock %}
