--- a/templates/Index.html.twig
+++ b/templates/Index.html.twig
@@ -1,26 +1,66 @@
 {% extends "master.html.twig" %}
 
-{% block title %}Index{% endblock %}
+
+{% block title %}home{% endblock %}
+
 
 {% block content %}
-    
-    <div class="properties">
-        <ul id="propertieslist">
-            {% for c in propertiesList %}
-                <li><a href="/list/">{{c.description}}</a></li>
 
-            {% endfor %}
-        </ul>
-    </div>
-    <div class="propertiesList">
-        {% for p in productList %}
-            <div class="propertiesContainer">
-                <div class="imageContainer">
-                    <img src="../images/{{p.imagePath}}" width="100">
+    <html>
+        <body>
+            <div class="navbar-default">
+                <div class="container">
+
                 </div>
-                <p>{{p.name}}</p> <p>{{p.price}}</p>
             </div>
+            <div class="jumbotron">
+                <div class="container">
+                    <div class="transbox">
+                        <h1>Find a place to stay in Kuwait.</h1>
+                        <p >With over 100 million users subscribed to our service!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4 col-sm-6">
+                        <h3>Welcome!</h3>
+                        <p style="opacity:">Find the perfect home for you and your family. Meet properties owners who are waiting for you, or you search for them. With millions of people subscribed to our service, we at rentalmtl are trying our best to put smiles on everyone's face.</p>
+                    </div>
+                    <div class="col-md-4 col-sm-6">
 
-        {% endfor %}
-    </div>
+                        <h3>Get Started!</h3>
+                        <ul style="list-style-type:square">
+                            <li><a href="#">Your property</a></li>
+                            <li><a href="#">Post an property</a></li>
+                            <li><a href="#">Account Settings</a></li>
+                            <li><a href="#">update your profile!</a></li>
+                        </ul>
+                        <h3>What is OnQ8.com?</h3>
+                        <p>OnQ8.com is a place where Buyer and Seller create a trusting relationship.</p>
+                    </div>
+                    <div class="col-md-4 col-sm-12" >
+                        <h3>How does it work?</h3>
+                        <dl>
+                            <dt>For Buyer:</dt>
+                            <dd>have to simply set up a quick profile, and add your properties.</dd>
+                            <dt>For seller:</dt>
+                            <dd>seller post properties, and wait for you to contact.</dd>
+                        </dl>
+                    </div>
+                </div>
+                <hr>
+            </div>
+            <footer>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-10  col-md-offset-1 text-center">
+                            <h3>Contact Us</h3>
+                            <p><small> <strong>OnQ8.com</strong><br> Tel: 514-619-6420</small> </p>
+                        </div>
+                    </div>
+                </div>
+            </footer>
+        </body>
+    </html>
 {% endblock %}
