--- a/templates/error_internal.html.twig
+++ b/templates/error_internal.html.twig
@@ -7,9 +7,9 @@
         <div class="center">
          <br>   
         <p style="text-align:center;"> Internal error occured, we are very sorry.<br>
-        our team of coding ninjas has been notified and is already working on the problems.<br>
-        <img src="/images/ninja.png" align="middle"><br>
-        <a href="/">Click to continue</a>.</p>
+        our team of coding ninjas has been notified and is already working on the problems<br>
+        <img src="./images/ninja.png" align="middle"><br>
+        <a href="./">Click to continue</a>.</p>
         
     </div>
     </div>
