--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -5,14 +5,33 @@
 
 {% block content %}
 
-{% if error %}
-    <p>Login invalid. Try again or <a href="/register">register</a>.</p>
-{% endif %}
+    {% if error %}
+        <p>Login invalid. Try again or <a href="/register">register</a>.</p>
+    {% endif %}
 
-<form method="post">
-    Email: <input type="email" name="email"><br>
-    Password: <input type="password" name="pass"><br>
-    <input type="submit" value="Login">
-</form>
 
+    <html>
+        <body>
+            <div class="container">
+                <div class="well">
+                    <h1>Login</h1>
+                    <form method="post">
+                        <div> <label>Username</label>
+                            <input type="text"  name="username"  placeholder="Enter username"> </div>
+                        <div> <label>Password</label>
+                            <input type="password" name="pass" " placeholder="Password"> </div>
+                        <button type="submit">Login</button>
+                    </form>
+                    <br>
+                    <p>Forgot Password?<br> <a id="click" href="/password/request"><b><u>Click here</u></b></a></p>
+                    <style> 
+                        #click {
+                            color:red;
+                        }
+                    </style>
+                </div>
+            </div>
+
+        </body>
+    </html>
 {% endblock %}
