--- a/templates/login_success.html.twig
+++ b/templates/login_success.html.twig
@@ -4,6 +4,22 @@
 
 {% block content %}
     
-<p>Login successful, <a href="/">click to continue</a>.</p>
-
+    <html>
+        <body>
+            <div class="container">
+                <div class="well">
+                    <h1 style="text-align:center;" >Login successful</h1>
+                    
+                    <br>
+                    <p style="text-align:center;" ><a href="./">click to continue</a></p>
+                </div>
+            </div>
+        </body>
+    </html>
 {% endblock %}
+
+
+
+
+
+
