--- a/templates/register.html.twig
+++ b/templates/register.html.twig
@@ -106,13 +106,13 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">Phone:</label>
                             <div class="col-md-9">
-                                <input type="text" name="phone" value="{{v.phone}}" class="form-control" id="EMAIL"  placeholder="(514)555-5555" ><span id="isTaken"></span>
+                                <input type="text" name="phone" value="{{v.phone}}" class="form-control" id="EMAIL"  placeholder="(514)555-5555" >
                             </div>
                         </div>
 
                         {#=============  address   ==================== #}
                         <div class="form-group">
-                            <label class="col-md-3 control-label">Phone:</label>
+                            <label class="col-md-3 control-label">Address:</label>
                             <div class="col-md-9">
                                 <input type="text" name="address" value="{{v.address}}" class="form-control" id="EMAIL"  placeholder="address" >
                             </div>
