--- a/templates/logout.html.twig
+++ b/templates/logout.html.twig
@@ -3,5 +3,17 @@
 {% block title %}Logout{% endblock %}
 
 {% block content %}
-<p>You've been logged out, <a href="/">click to continue</a>.</p>
+    <html>
+        <body>
+            <div class="container">
+                <div class="well">
+                    <h1 style="text-align:center;" >You've been logged out</h1>
+                    
+                    <br>
+                    <p style="text-align:center;" ><a href="./">click to continue</a></p>
+                </div>
+            </div>
+        </body>
+    </html>
+    
 {% endblock %}
