--- a/templates/master.html.twig
+++ b/templates/master.html.twig
@@ -24,13 +24,13 @@
                     <span class="icon-bar"></span> 
                     <span class="icon-bar"></span> 
                 </button>
-                <a class="navbar-brand" href="../">
+                <a class="navbar-brand" href="./">
                     <img src="images/logo.png" width="140" style="margin-top:-10px">
                 </a> 
             </div>
             
             <div class="collapse navbar-collapse" id="nav-bar-links">
-
+ {#=========================
                 <form class="navbar-form navbar-right" style="border: none" onSubmit="return Validate()" method="post" action="">
                     
                     <div class="form-group">
@@ -39,9 +39,17 @@
                         <input type="submit" value="login" name="login" class="btn btn-default">
                     </div>
                 </form>
-
+================================== #}
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="/register">Register</a></li>
+                    <li><a href="./login">Login</a></li>
+                    <li><a href="./register">Register</a></li>
+                    <li><a href="./logout">logout</a></li>
+                    <li><a href="./">Home</a></li>
+                    
+                    
+                    
+                    
+                    
                 </ul>
             </div>
         </div>
