--- a/templates/Index.html.twig
+++ b/templates/Index.html.twig
@@ -16,8 +16,8 @@
             <div class="jumbotron">
                 <div class="container">
                     <div class="transbox">
-                        <h1>Find a place to stay in Kuwait.</h1>
-                        <p >With over 100 million users subscribed to our service!</p>
+                        <h1 style="text-align:center;">Find a Properties in Kuwait.</h1>
+                        <p style="text-align:center;">With over million users subscribed to our service!</p>
                     </div>
                 </div>
             </div>
