add - delete - edit

--- a/templates/internal_error.html.twig
+++ b/templates/internal_error.html.twig
@@ -8,7 +8,7 @@
          <br>   
         <p style="text-align:center;"> Internal error occured, we are very sorry.<br>
         our team of coding ninjas has been notified and is already working on the problems.<br>
-        <img src="../images/ninja.png" align="middle"><br>
+        <img src="/images/ninja.png" align="middle"><br>
         <a href="/">Click to continue</a>.</p>
         
     </div>
