--- a/templates/login_success.html.twig
+++ b/templates/login_success.html.twig
@@ -11,7 +11,7 @@
                     <h1 style="text-align:center;" >Login successful</h1>
                     
                     <br>
-                    <p style="text-align:center;" ><a href="./">click to continue</a></p>
+                    <p style="text-align:center;" ><a href="/property/add">click to add property</a></p>
                 </div>
             </div>
         </body>
