--- a/templates/logout.html.twig
+++ b/templates/logout.html.twig
@@ -10,7 +10,7 @@
                     <h1 style="text-align:center;" >You've been logged out</h1>
                     
                     <br>
-                    <p style="text-align:center;" ><a href="./">click to continue</a></p>
+                    <p style="text-align:center;" ><a href="/">click to continue</a></p>
                 </div>
             </div>
         </body>
