--- a/templates/property/property_delete_success.html.twig
+++ b/templates/property/property_delete_success.html.twig
@@ -3,5 +3,18 @@
 {% block title %}Property delete{% endblock %}
 
 {% block content %}    
-    <p>Property deleted. <a href="/property/list">Click to continue</a>.</p>
+    <html>
+        <body>
+            <div class="container">
+                <div class="well">
+                    <h1 style="text-align:center;">Property deleted.</h1>
+             <p> <a href="/property/list">Click to continue</a>.</p>
+                </div>
+            </div>
+        </body>
+    </html>
+    
 {% endblock %}
+
+
+    
