--- a/templates/register_success.html.twig
+++ b/templates/register_success.html.twig
@@ -12,7 +12,7 @@
                     <h1 style="text-align:center;" >You've been registered. You may now</h1>
                     
                     <br>
-                    <p style="text-align:center;" ><a href="./login">click to continue</a></p>
+                    <p style="text-align:center;" ><a href="/login">click to continue</a></p>
                 </div>
             </div>
         </body>
