--- a/templates/access_denied.html.twig
+++ b/templates/access_denied.html.twig
@@ -2,6 +2,17 @@
 
 {% block title %}Access denied{% endblock %}
 
-{% block content %}  
-<p>Access denied. <a href="./">Click to continue</a>.</p>
+{% block content %} 
+    <html>
+        <body>
+            <div class="container">
+                <div class="well">
+                    <h1 style="text-align:center;" >Access denied. </h1>
+                    
+                    <br>
+                    <p style="text-align:center;" ><a href="/">Click to continue</a></p>
+                </div>
+            </div>
+        </body>
+    </html>
 {% endblock %}
