--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -14,16 +14,16 @@
         <body>
             <div class="container">
                 <div class="well">
-                    <h1>Login</h1>
-                    <form method="post">
+                    <h1 style="text-align:center;">Login</h1>
+                    <form method="post" style="text-align:center;">
                         <div> <label>Username</label>
-                            <input type="text"  name="username"  placeholder="Enter username"> </div>
+                            <input type="text"  name="username"  placeholder="Enter username"  style="width: 30%;" > </div>
                         <div> <label>Password</label>
-                            <input type="password" name="pass" " placeholder="Password"> </div>
+                            <input type="password" name="pass" " placeholder="Password"  style="width: 30%;" > </div>
                         <button type="submit">Login</button>
                     </form>
                     <br>
-                    <p>Forgot Password?<br> <a id="click" href="/password/request"><b><u>Click here</u></b></a></p>
+                    <p style="text-align:center;" >Forgot Password?<br> <a id="click" href="/password/request"><b><u>Click here</u></b></a></p>
                     <style> 
                         #click {
                             color:red;
