--- a/templates/property/property_delete.html.twig
+++ b/templates/property/property_delete.html.twig
@@ -3,12 +3,27 @@
 {% block title %}Confirm delete{% endblock %}
 
 {% block content %}
-    <p><br>Are you sure you want to delete this property?</b></p>
-    <form action="/property/list" style="display:inline;">            
-        <input type="submit" value="Candel">
-    </form>
-    <form method="post" action="/property/delete/{{p.propertyId}}" style="display:inline;">            
-        <input type="hidden" name="confirmed" value="true">
-        <input type="submit" value="Delete">
-    </form>    
+
+    <html>
+        <body>
+            <div class="container">
+                <div class="well">
+                    <h3 style="text-align:center;">Are you sure you want to delete this property?</h3>
+
+                    <form action="/property/list" style="display:inline;">            
+                        <input type="submit" value="Candel">
+                    </form>
+                    <form method="post" action="/property/delete/{{p.propertyId}}" style="display:inline;">            
+                        <input type="hidden" name="confirmed" value="true">
+                        <input type="submit" value="Delete">
+                    </form>
+
+                </div>
+            </div>
+        </body>
+    </html>
+
+
+
+
 {% endblock %}
