--- a/templates/register.html.twig
+++ b/templates/register.html.twig
@@ -145,5 +145,9 @@
 
         </div>
     </div>
-
+        <script src="/script/registration.js"></script>
+       <script src="/script/validateform.js"></script>
+       <script src="/script/jquery-1.11.2.min.js"></script>
+       <script src="/script/bootstrap.min.js"></script>
+    
 {% endblock %} 
